[tool.poetry]
name = "infotorch_covid19"
version = "0.1.0"
description = ""
authors = ["nc9 <nc9@infotorch.org"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.11.1"
jupyter = "^1.0.0"
scrapy = "^1.8.0"
pandas = "^1.0.0"
requests = "^2.22.0"
geopandas = "^0.6.2"
shapely = "^1.6.4"
requests-cache = "^0.5.2"
plotly = "^4.5.2"
ipywidgets = "^7.5.1"
scikit-learn = "^0.22.1"
python-polylabel = "^0.6"
matplotlib = "^3.1.3"
fastprogress = "^0.2.2"
colorama = "^0.4.3"
coloredlogs = "^14.0"
dtale = "^1.7.12"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7.8"
isort = "^4.3.21"
pylint = "^2.2"
rope = "^0.16.0"

[tool.black]
line-length = 90
target_version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
